--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.12",
     "@aws-sdk/client-s3": "^3.120.0",
-    "@aws-sdk/s3-request-presigner": "^3.120.0",
+    "@aws-sdk/s3-request-presigner": "^3.121.0",
     "@babel/parser": "^7.18.6",
     "@danielwii/asuna-helper": "^0.0.36",
     "@danielwii/asuna-shared": "^0.0.8",
@@ -54,11 +54,15 @@
     "@nestjs/terminus": "^8.1.0",
     "@nestjs/typeorm": "^8.1.4",
     "@nestjs/websockets": "^8.4.7",
+    "@opentelemetry/exporter-jaeger": "^1.3.1",
     "@opentelemetry/instrumentation": "^0.29.2",
     "@opentelemetry/instrumentation-express": "^0.30.0",
     "@opentelemetry/instrumentation-graphql": "^0.29.0",
     "@opentelemetry/instrumentation-http": "^0.29.2",
+    "@opentelemetry/resources": "^1.3.1",
     "@opentelemetry/sdk-trace-node": "^1.3.1",
+    "@opentelemetry/semantic-conventions": "^1.3.1",
+    "@opentelemetry/tracing": "^0.24.0",
     "@prisma/client": "4.0.0",
     "@sentry/node": "^7.3.1",
     "@sentry/tracing": "^7.3.1",
@@ -114,7 +118,7 @@
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.20",
     "node-fetch": "^2.6.7",
-    "nodemailer": "^6.7.5",
+    "nodemailer": "^6.7.6",
     "opentracing": "^0.14.7",
     "otplib": "^12.0.1",
     "ow": "^0.28.1",
@@ -124,7 +128,7 @@
     "qiniu": "^7.7.0",
     "ramda": "^0.28.0",
     "raw-body": "^2.5.1",
-    "redis": "^4.1.0",
+    "redis": "^4.1.1",
     "redis-dataloader": "^1.0.2",
     "regenerator-runtime": "^0.13.9",
     "response-time": "^2.3.2",
@@ -158,7 +162,7 @@
     "@types/glob": "^7.2.0",
     "@types/highland": "^2.12.14",
     "@types/jaeger-client": "^3.18.3",
-    "@types/jest": "^28.1.3",
+    "@types/jest": "^28.1.4",
     "@types/lodash": "^4.14.182",
     "@types/luxon": "^2.3.2",
     "@types/mime-types": "^2.1.1",
