--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.12",
-    "@apollo/server": "^4.2.2",
-    "@apollo/server-plugin-response-cache": "^4.0.3",
-    "@aws-sdk/client-s3": "^3.226.0",
-    "@aws-sdk/s3-request-presigner": "^3.226.0",
+    "@apollo/server": "^4.3.0",
+    "@apollo/server-plugin-response-cache": "^4.1.0",
+    "@aws-sdk/client-s3": "^3.234.0",
+    "@aws-sdk/s3-request-presigner": "^3.234.0",
     "@babel/parser": "^7.20.5",
     "@contentful/rich-text-html-renderer": "^16.0.2",
     "@danielwii/asuna-helper": "^0.1.0",
@@ -66,24 +66,24 @@
     "@opentelemetry/semantic-conventions": "^1.8.0",
     "@prisma/client": "4.7.1",
     "@sendgrid/mail": "^7.7.0",
-    "@sentry/node": "^7.24.2",
-    "@sentry/tracing": "^7.24.2",
+    "@sentry/node": "^7.27.0",
+    "@sentry/tracing": "^7.27.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.17.1",
     "alipay-sdk": "^3.2.0",
     "amqplib": "^0.10.3",
-    "apollo-opentracing": "^3.0.39",
+    "apollo-opentracing": "^3.0.40",
     "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-express": "^3.11.1",
     "apple-signin-auth": "^1.7.4",
     "bluebird": "^3.7.2",
     "blurhash": "^2.0.4",
-    "builder-pattern": "^2.1.0",
+    "builder-pattern": "^2.2.0",
     "cache-manager": "^5.1.4",
     "cache-manager-redis-store": "^3.0.1",
     "chance": "^1.1.9",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.13.2",
     "common-tags": "^1.8.2",
     "compression": "^1.7.4",
     "connect-redis": "^6.1.3",
@@ -92,10 +92,11 @@
     "cron-parser": "^4.7.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
-    "elastic-apm-node": "^3.40.1",
+    "elastic-apm-node": "^3.41.0",
     "email-templates": "^10.0.1",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
+    "figlet": "^1.5.2",
     "fix-esm": "^1.0.1",
     "fs-extra": "^11.1.0",
     "geoip-lite": "^1.4.6",
@@ -115,7 +116,7 @@
     "lru_map": "^0.4.1",
     "luxon": "^3.1.1",
     "minio": "^7.0.32",
-    "mongoose": "^6.8.0",
+    "mongoose": "^6.8.1",
     "mongoose-autopopulate": "^0.16.1",
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.21",
@@ -134,7 +135,7 @@
     "redis-dataloader": "^1.0.2",
     "regenerator-runtime": "^0.13.11",
     "response-time": "^2.3.2",
-    "rxjs": "^7.6.0",
+    "rxjs": "^7.8.0",
     "sharp": "^0.31.2",
     "socket.io-redis": "^6.1.1",
     "typeorm": "^0.3.11",
@@ -159,6 +160,7 @@
     "@types/cron": "^2",
     "@types/email-templates": "^10",
     "@types/express-session": "^1",
+    "@types/figlet": "^1",
     "@types/fs-extra": "^9",
     "@types/geoip-lite": "^1",
     "@types/glob": "^8",
@@ -185,7 +187,7 @@
     "@types/xml2js": "^0",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "eslint": "^8.29.0",
+    "eslint": "^8.30.0",
     "eslint-config-alloy": "^4.7.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.26.0",
@@ -198,7 +200,7 @@
     "prettier": "^2.8.1",
     "pretty-quick": "^3.1.3",
     "prisma": "4.7.1",
-    "sqlite3": "^5.1.2",
+    "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
