--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "yarn clean && nest build",
+    "build:nest": "yarn clean && nest build",
+    "build": "yarn clean && tsc --emitDeclarationOnly --declarationDir dist && swc src -d dist",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "dev": "node --preserve-symlinks -r ts-node/register src/main.ts",
-    "dev:watch": "nodemon --exec node --preserve-symlinks -r ts-node/register src/main.ts",
+    "dev": "NODE_ENV=development node --trace-deprecation --experimental-specifier-resolution=node --openssl-legacy-provider --loader ts-node/esm src/main.ts",
+    "dev:debug": "NODE_ENV=development node --trace-deprecation --experimental-specifier-resolution=node --openssl-legacy-provider --loader ts-node/esm --inspect src/main.ts",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./",
@@ -41,8 +42,8 @@
     "@aws-sdk/s3-request-presigner": "^3.259.0",
     "@babel/parser": "^7.20.13",
     "@contentful/rich-text-html-renderer": "^16.0.2",
-    "@danielwii/asuna-helper": "^0.1.2",
-    "@danielwii/asuna-shared": "^0.0.9",
+    "@danielwii/asuna-helper": "^0.1.3",
+    "@danielwii/asuna-shared": "^0.0.10",
     "@google-cloud/opentelemetry-cloud-trace-exporter": "^1.2.0",
     "@metinseylan/nestjs-opentelemetry": "^3.0.0",
     "@nestjs/apollo": "^10.1.7",
@@ -97,7 +98,6 @@
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "figlet": "^1.5.2",
-    "fix-esm": "^1.0.1",
     "fs-extra": "^11.1.0",
     "geoip-lite": "^1.4.7",
     "graphql": "^16.6.0",
@@ -146,6 +146,8 @@
     "@nestjs/cli": "^9.1.9",
     "@nestjs/testing": "^9.2.1",
     "@serverless-guru/prettier-plugin-import-order": "^0.4.1",
+    "@swc/cli": "^0.1.59",
+    "@swc/core": "^1.3.30",
     "@tsconfig/node18-strictest-esm": "^1",
     "@types/ali-oss": "^6",
     "@types/amqplib": "^0",
