--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@alicloud/pop-core": "^1.7.12",
     "@apollo/server": "^4.3.2",
     "@apollo/server-plugin-response-cache": "^4.1.0",
-    "@aws-sdk/client-s3": "^3.259.0",
-    "@aws-sdk/s3-request-presigner": "^3.259.0",
+    "@aws-sdk/client-s3": "^3.262.0",
+    "@aws-sdk/s3-request-presigner": "^3.262.0",
     "@babel/parser": "^7.20.13",
     "@contentful/rich-text-html-renderer": "^16.0.2",
     "@danielwii/asuna-helper": "^0.1.3",
@@ -47,33 +47,33 @@
     "@google-cloud/opentelemetry-cloud-trace-exporter": "^1.2.0",
     "@metinseylan/nestjs-opentelemetry": "^3.0.0",
     "@nestjs/apollo": "^10.1.7",
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/core": "^9.2.1",
+    "@nestjs/common": "^9.3.1",
+    "@nestjs/core": "^9.3.1",
     "@nestjs/cqrs": "^9.0.1",
     "@nestjs/graphql": "^10.1.7",
     "@nestjs/mongoose": "^9.2.1",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.1",
-    "@nestjs/platform-socket.io": "^9.2.1",
-    "@nestjs/platform-ws": "^9.2.1",
+    "@nestjs/passport": "^9.0.1",
+    "@nestjs/platform-express": "^9.3.1",
+    "@nestjs/platform-socket.io": "^9.3.1",
+    "@nestjs/platform-ws": "^9.3.1",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/terminus": "^9.1.4",
     "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "^9.2.1",
+    "@nestjs/websockets": "^9.3.1",
     "@opentelemetry/auto-instrumentations-node": "^0.36.0",
-    "@opentelemetry/exporter-jaeger": "^1.9.0",
-    "@opentelemetry/resources": "^1.9.0",
-    "@opentelemetry/semantic-conventions": "^1.9.0",
+    "@opentelemetry/exporter-jaeger": "^1.9.1",
+    "@opentelemetry/resources": "^1.9.1",
+    "@opentelemetry/semantic-conventions": "^1.9.1",
     "@prisma/client": "4.9.0",
     "@sendgrid/mail": "^7.7.0",
-    "@sentry/node": "^7.34.0",
-    "@sentry/tracing": "^7.34.0",
+    "@sentry/node": "^7.36.0",
+    "@sentry/tracing": "^7.36.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.17.1",
     "alipay-sdk": "^3.2.0",
     "amqplib": "^0.10.3",
-    "apollo-opentracing": "^3.0.41",
+    "apollo-opentracing": "^3.0.42",
     "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-express": "^3.11.1",
     "apple-signin-auth": "^1.7.5",
@@ -102,7 +102,7 @@
     "geoip-lite": "^1.4.7",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
-    "graphql-tools": "^8.3.16",
+    "graphql-tools": "^8.3.17",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
     "helmet": "^6.0.1",
@@ -110,7 +110,7 @@
     "ioredis": "^5.3.0",
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
-    "libphonenumber-js": "^1.10.18",
+    "libphonenumber-js": "^1.10.19",
     "lodash": "^4.17.21",
     "lru-cache": "^7.14.1",
     "lru_map": "^0.4.1",
@@ -119,6 +119,7 @@
     "mongoose": "^6.9.0",
     "mongoose-autopopulate": "^0.17.1",
     "morgan": "^1.10.0",
+    "nestjs-spelunker": "^1.1.3",
     "node-buffs": "^0.8.21",
     "node-fetch": "^3.3.0",
     "nodemailer": "^6.9.1",
@@ -131,7 +132,7 @@
     "qiniu": "^7.8.0",
     "ramda": "^0.28.0",
     "raw-body": "^2.5.1",
-    "redis": "^4.6.3",
+    "redis": "^4.6.4",
     "redis-dataloader": "^1.0.2",
     "regenerator-runtime": "^0.13.11",
     "response-time": "^2.3.2",
@@ -144,10 +145,10 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.9",
-    "@nestjs/testing": "^9.2.1",
+    "@nestjs/testing": "^9.3.1",
     "@serverless-guru/prettier-plugin-import-order": "^0.4.1",
-    "@swc/cli": "^0.1.59",
-    "@swc/core": "^1.3.30",
+    "@swc/cli": "^0.1.61",
+    "@swc/core": "^1.3.32",
     "@tsconfig/node18-strictest-esm": "^1",
     "@types/ali-oss": "^6",
     "@types/amqplib": "^0",
@@ -208,7 +209,7 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "nodemonConfig": {
     "verbose": true,
