--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@alicloud/pop-core": "^1.7.12",
     "@apollo/server": "^4.4.0",
     "@apollo/server-plugin-response-cache": "^4.1.0",
-    "@aws-sdk/client-s3": "^3.276.0",
-    "@aws-sdk/s3-request-presigner": "^3.276.0",
+    "@aws-sdk/client-s3": "^3.281.0",
+    "@aws-sdk/s3-request-presigner": "^3.281.0",
     "@contentful/rich-text-html-renderer": "^16.0.2",
     "@danielwii/asuna-helper": "^0.1.6",
     "@danielwii/asuna-shared": "^0.0.11",
@@ -64,13 +64,13 @@
     "@opentelemetry/exporter-jaeger": "^1.9.1",
     "@opentelemetry/resources": "^1.9.1",
     "@opentelemetry/semantic-conventions": "^1.9.1",
-    "@prisma/client": "4.10.1",
+    "@prisma/client": "4.11.0",
     "@sendgrid/mail": "^7.7.0",
-    "@sentry/node": "^7.38.0",
-    "@sentry/tracing": "^7.38.0",
+    "@sentry/node": "^7.39.0",
+    "@sentry/tracing": "^7.39.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.17.1",
-    "alipay-sdk": "^3.2.0",
+    "alipay-sdk": "^3.3.0",
     "amqplib": "^0.10.3",
     "apollo-opentracing": "^3.0.42",
     "apollo-server-cache-redis": "^3.3.1",
@@ -109,15 +109,16 @@
     "ioredis": "^5.3.1",
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
-    "libphonenumber-js": "^1.10.20",
+    "libphonenumber-js": "^1.10.21",
     "lodash": "^4.17.21",
     "lru-cache": "^7.17.0",
     "lru_map": "^0.4.1",
     "luxon": "^3.2.1",
     "minio": "^7.0.32",
-    "mongoose": "^6.9.2",
+    "mongoose": "^6.10.0",
     "mongoose-autopopulate": "^0.17.1",
     "morgan": "^1.10.0",
+    "nanoid": "^4.0.1",
     "nestjs-spelunker": "^1.1.3",
     "node-buffs": "^0.8.25",
     "node-fetch": "^3.3.0",
@@ -131,7 +132,7 @@
     "qiniu": "^7.8.0",
     "ramda": "^0.28.0",
     "raw-body": "^2.5.2",
-    "redis": "^4.6.4",
+    "redis": "^4.6.5",
     "redis-dataloader": "^1.0.2",
     "regenerator-runtime": "^0.13.11",
     "response-time": "^2.3.2",
@@ -147,7 +148,7 @@
     "@nestjs/testing": "^9.3.9",
     "@serverless-guru/prettier-plugin-import-order": "^0.4.1",
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.36",
+    "@swc/core": "^1.3.37",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/ali-oss": "^6",
     "@types/amqplib": "^0",
@@ -189,21 +190,21 @@
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^9",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "eslint": "^8.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
     "eslint-config-alloy": "^4.9.0",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-plugin-import": "^2.27.5",
-    "glob": "^8.1.0",
+    "glob": "^9.0.2",
     "husky": "^8.0.3",
     "jest": "^29.4.3",
-    "minimatch": "^7.0.1",
+    "minimatch": "^7.3.0",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
-    "prisma": "4.10.1",
+    "prisma": "4.11.0",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
