--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
+    "ignoreDeprecations": "5.0"
   },
   "include": ["src/**/*"],
   "exclude": ["**/node_modules/*", "**/*.spec.ts", "./dist"]
