--- a/package.json
+++ b/package.json
@@ -38,47 +38,47 @@
     "@alicloud/pop-core": "^1.7.12",
     "@apollo/server": "^4.5.0",
     "@apollo/server-plugin-response-cache": "^4.1.1",
-    "@aws-sdk/client-s3": "^3.294.0",
-    "@aws-sdk/s3-request-presigner": "^3.294.0",
+    "@apollo/utils.keyvadapter": "^2.0.1",
+    "@apollo/utils.keyvaluecache": "^2.1.0",
+    "@aws-sdk/client-s3": "^3.295.0",
+    "@aws-sdk/s3-request-presigner": "^3.295.0",
     "@contentful/rich-text-html-renderer": "^16.0.3",
     "@danielwii/asuna-helper": "^0.1.6",
     "@danielwii/asuna-shared": "^0.0.12",
     "@google-cloud/opentelemetry-cloud-trace-exporter": "^2.0.0",
     "@metinseylan/nestjs-opentelemetry": "^3.0.0",
-    "@nestjs/apollo": "^11.0.3",
-    "@nestjs/common": "^9.3.10",
-    "@nestjs/core": "^9.3.10",
+    "@nestjs/apollo": "^11.0.4",
+    "@nestjs/common": "^9.3.11",
+    "@nestjs/core": "^9.3.11",
     "@nestjs/cqrs": "^9.0.3",
-    "@nestjs/graphql": "^11.0.0",
+    "@nestjs/graphql": "^11.0.4",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.3.10",
-    "@nestjs/platform-socket.io": "^9.3.10",
-    "@nestjs/platform-ws": "^9.3.10",
+    "@nestjs/platform-express": "^9.3.11",
+    "@nestjs/platform-socket.io": "^9.3.11",
+    "@nestjs/platform-ws": "^9.3.11",
     "@nestjs/schedule": "^2.2.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/terminus": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "^9.3.10",
+    "@nestjs/websockets": "^9.3.11",
     "@opentelemetry/auto-instrumentations-node": "^0.36.4",
-    "@opentelemetry/exporter-jaeger": "^1.10.0",
-    "@opentelemetry/resources": "^1.10.0",
-    "@opentelemetry/semantic-conventions": "^1.10.0",
+    "@opentelemetry/exporter-jaeger": "^1.10.1",
+    "@opentelemetry/resources": "^1.10.1",
+    "@opentelemetry/semantic-conventions": "^1.10.1",
     "@sendgrid/mail": "^7.7.0",
-    "@sentry/node": "^7.43.0",
-    "@sentry/tracing": "^7.43.0",
+    "@sentry/node": "^7.44.2",
+    "@sentry/tracing": "^7.44.2",
+    "@socket.io/redis-adapter": "^8.1.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.17.1",
     "alipay-sdk": "^3.3.0",
     "amqplib": "^0.10.3",
-    "apollo-opentracing": "^3.0.45",
-    "apollo-server-cache-redis": "^3.3.1",
-    "apollo-server-express": "^3.12.0",
     "apple-signin-auth": "^1.7.5",
     "bluebird": "^3.7.2",
     "blurhash": "^2.0.5",
     "builder-pattern": "^2.2.0",
-    "cache-manager": "^5.1.7",
+    "cache-manager": "^5.2.0",
     "cache-manager-redis-store": "^3.0.1",
     "chance": "^1.1.11",
     "class-transformer": "^0.5.1",
@@ -96,7 +96,8 @@
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "figlet": "^1.5.2",
-    "fs-extra": "^11.1.0",
+    "firebase-admin": "^11.5.0",
+    "fs-extra": "^11.1.1",
     "geoip-lite": "^1.4.7",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.4",
@@ -108,13 +109,14 @@
     "ioredis": "^5.3.1",
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
+    "keyv": "^4.5.2",
     "libphonenumber-js": "^1.10.24",
     "lodash": "^4.17.21",
     "lru-cache": "^8.0.4",
     "lru_map": "^0.4.1",
     "luxon": "^3.3.0",
     "minio": "^7.0.32",
-    "mongoose": "^6.10.3",
+    "mongoose": "^6.10.4",
     "mongoose-autopopulate": "^0.17.1",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.1",
@@ -137,14 +139,13 @@
     "response-time": "^2.3.2",
     "rxjs": "^7.8.0",
     "sharp": "^0.31.3",
-    "socket.io-redis": "^6.1.1",
     "typeorm": "^0.3.12",
     "xlsx": "^0.18.5",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.3.0",
-    "@nestjs/testing": "^9.3.10",
+    "@nestjs/testing": "^9.3.11",
     "@serverless-guru/prettier-plugin-import-order": "^0.4.1",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/ali-oss": "^6",
@@ -187,19 +188,19 @@
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^9",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-alloy": "^4.9.0",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-plugin-import": "^2.27.5",
-    "glob": "^9.3.0",
+    "glob": "^9.3.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "minimatch": "^7.4.2",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.6",
     "pretty-quick": "^3.1.3",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
