--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "sourceMap": true,
     "rootDir": "src",
     "outDir": "dist",
-    "ignoreDeprecations": "5.0"
+    "ignoreDeprecations": "5.0",
+    "typeRoots": ["./typings", "./node_modules/@types"]
   },
   "include": ["src/**/*"],
   "exclude": ["**/node_modules/*", "**/*.spec.ts", "./dist"]
